Add release notes to Nightly releases

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -41,3 +41,4 @@ jobs:
           prerelease: true
           replacesArtifacts: true
           allowUpdates: true
+          generateReleaseNotes: true
