--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "src/index.js",
 	"license": "MIT",
 	"dependencies": {
-		"xlsx": "^0.18.5"
+		"@e965/xlsx": "^0.20.2"
 	},
 	"scripts": {
 		"start": "node ./src/index.js",
