--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -14,19 +14,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@master
 
-      - name: Setup NodeJS and Modules
-        uses: actions/setup-node@v3
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
         with:
-          node-version: 20
+          bun-version: 1.2.6
 
-      - name: Setup Yarn
-        run: npm i -g yarn
-
-      - name: Install dependencies 
-        run: yarn --frozen-lockfile
+        run: bun install --frozen-lockfile
 
       - name: Generate files 
-        run: yarn start
+        run: bun run start
 
       - name: Update Nightly
         uses: ncipollo/release-action@v1
