--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@e965/xlsx": "^0.20.2",
+		"csv-simple-parser": "^2.0.2",
 		"typescript": "^5.8.3"
 	},
 	"scripts": {
