--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           bun-version: 1.2.6
 
-        run: bun install --frozen-lockfile
+      - run: bun install --frozen-lockfile
 
       - name: Generate files 
         run: bun run start
